# willow-python-sdk

./: .gitignore  LICENSE.txt  README.md  build.bat  pyproject.toml
docs/: architecture_and_best_practices.md  evaluation.md  provisioning.md  retargeting.md  topology.md  transforms.md
examples/: 1_cloud_batch_analysis.py  2_live_edge_webcam.py
tests/: test_willow_sdk.py
willow/: __init__.py  client.py  detector.py  evaluator.py  math_kernels.py  parsers.py  retargeting.py  transforms.py  types.py
