[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "willow-runtime"
version = "5.1.1"
description = "Willow 5 Runtime: Action Recognition, Retargeting, & Edge Evaluator"
readme = "README.md"
authors = [{ name = "Willow Dynamics" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "numba>=0.56.0",
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://willowdynamics.com"